# maria-wish-bot

./: .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
bot/: __init__.py  config.py  main.py  scheduler.py
bot/ai/: gemini.py
bot/database/: db.py  models.py
bot/handlers/: __init__.py  base.py  callbacks.py
bot/keyboards/: inline.py
